--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon ./src/index.js",
+    "migration-generate": "npx sequelize-cli migration:generate --migrations-path ./db-migration",
+    "migration-development": "NODE_ENV=development npx  sequelize-cli db:migrate",
+    "seeds-generate": "npx sequelize-cli seed:generate --seeders-path ./db-migration/seeders",
+    "seeds-development": "NODE_ENV=development npx sequelize-cli db:seed"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +17,10 @@
   "dependencies": {
     "dotenv-flow": "^4.1.0",
     "express": "^4.19.2",
-    "express-jsdoc-swagger": "^1.8.0"
+    "express-jsdoc-swagger": "^1.8.0",
+    "mysql2": "^3.10.1",
+    "sequelize": "^6.37.3"
   },
-  "type": "module",
   "engines": {
     "node": ">= 20"
   },
