--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv-flow": "^4.1.0",
     "express": "^4.19.2",
     "express-jsdoc-swagger": "^1.8.0",
+    "express-validator": "^7.1.0",
     "mysql2": "^3.10.1",
     "sequelize": "^6.37.3"
   },
