--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest --detectOpenHandles --coverage --setupFiles dotenv-flow/config",
     "dev": "NODE_ENV=development nodemon -r dotenv-flow/config ./src/index.js",
     "migration-generate": "npx sequelize-cli migration:generate --migrations-path ./db-migration",
     "migration-development": "NODE_ENV=development npx  sequelize-cli db:migrate",
@@ -21,8 +21,10 @@
     "express": "^4.19.2",
     "express-jsdoc-swagger": "^1.8.0",
     "express-validator": "^7.1.0",
+    "jest": "^29.7.0",
     "mysql2": "^3.10.1",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "supertest": "^7.0.0"
   },
   "engines": {
     "node": ">= 20"
