--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "migration-development-undo": "NODE_ENV=development npx  sequelize-cli db:migrate:undo",
     "seeds-generate": "npx sequelize-cli seed:generate --seeders-path ./db-migration/seeders",
     "seeds-development": "NODE_ENV=development npx sequelize-cli db:seed",
-    "seeds-development-undo": "NODE_ENV=development npx sequelize-cli db:seed:undo"
+    "seeds-development-undo": "NODE_ENV=development npx sequelize-cli db:seed:undo",
+    "lint": "npx eslint \"src/**/*.js\"",
+    "lint-fix": "npx eslint \"src/**/*.js\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +32,8 @@
     "node": ">= 20"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "nodemon": "^3.1.3"
   }
 }
