chore: update env files

--- a/.env.docker_compose
+++ b/.env.docker_compose
@@ -1,7 +1,8 @@
 HEADER_AUTH_NAME=hahow
 HEADER_AUTH_PASSWORD=rocks
 
-DB_ADDRESS=localhost
+DB_ADDRESS=mysql-8.0_shield
 DB_DATABASE=shield
 DB_USERNAME=testuser
 DB_PASSWORD=test
+DB_PORT=
