--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,7 @@
 HEADER_AUTH_NAME=testname
 HEADER_AUTH_PASSWORD=test
+
+DB_ADDRESS=localhost
+DB_DATABASE=shield
+DB_USERNAME=testuser
+DB_PASSWORD=test
