chore: update migration.config, remove hard coded configs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
     build: 
         dockerfile: Dockerfile-migration
     container_name: "migration_seeder"
+    environment:
+      - NODE_ENV=docker_compose
     depends_on:
       database:
         condition: service_healthy
