chore: update Dockerfile-migration

--- a/Dockerfile-migration
+++ b/Dockerfile-migration
@@ -5,4 +5,4 @@ COPY . .
 
 RUN npm ci
 
-CMD ["sh", "-c", "NODE_ENV=development npm run migration-development && npm run seeds-development -- --seed 20240619151605-marvel-assemble-4.js"]
+CMD ["sh", "-c", "npm run migration-development && npm run seeds-development -- --seed 20240619151605-marvel-assemble-4.js"]
