fix: fix env file with dotenv-flow cli when running migration

--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "test": "NODE_ENV=test jest --detectOpenHandles --coverage --setupFiles dotenv-flow/config --silent",
     "dev": "NODE_ENV=development nodemon -r dotenv-flow/config ./src/index.js",
     "migration-generate": "npx sequelize-cli migration:generate --migrations-path ./db-migration",
-    "migration-development": "NODE_ENV=development npx  sequelize-cli db:migrate",
-    "migration-development-undo": "NODE_ENV=development npx  sequelize-cli db:migrate:undo",
+    "migration-development": "NODE_ENV=development npx dotenv-flow -- npx sequelize-cli db:migrate",
+    "migration-development-undo": "NODE_ENV=development npx dotenv-flow -- npx sequelize-cli db:migrate:undo",
+    "migration-production": "NODE_ENV=production npx dotenv-flow -- npx sequelize-cli db:migrate",
+    "migration-production-undo": "NODE_ENV=production npx dotenv-flow -- npx sequelize-cli db:migrate:undo",
+    "migration-docker": "npx dotenv-flow -- npx sequelize-cli db:migrate",
+    "migration-docker-undo": "npx dotenv-flow -- npx sequelize-cli db:migrate:undo",
     "seeds-generate": "npx sequelize-cli seed:generate --seeders-path ./db-migration/seeders",
-    "seeds-development": "NODE_ENV=development npx sequelize-cli db:seed",
-    "seeds-development-undo": "NODE_ENV=development npx sequelize-cli db:seed:undo",
+    "seeds-development": "NODE_ENV=development npx dotenv-flow -- npx sequelize-cli db:seed",
+    "seeds-development-undo": "NODE_ENV=development npx dotenv-flow -- npx sequelize-cli db:seed:undo",
+    "seeds-docker": "npx dotenv-flow -- npx sequelize-cli db:seed",
+    "seeds-docker-undo": "npx dotenv-flow -- npx sequelize-cli db:seed:undo",
+    "seeds-production": "NODE_ENV=production npx dotenv-flow -- npx sequelize-cli db:seed",
+    "seeds-production-undo": "NODE_ENV=production npx dotenv-flow -- npx sequelize-cli db:seed:undo",
     "lint": "npx eslint \"src/**/*.js\"",
     "lint-fix": "npx eslint \"src/**/*.js\" --fix"
   },
@@ -20,6 +28,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv-flow": "^4.1.0",
+    "dotenv-flow-cli": "^1.1.1",
     "express": "^4.19.2",
     "express-jsdoc-swagger": "^1.8.0",
     "express-validator": "^7.1.0",
